# fastapi_clean_arch

./: .env.example  pyproject.toml
app/: main.py
app/model/: base_model.py
app/util/: schema.py
