[tool.poetry]
name = "clean-arch"
version = "0.1.0"
description = ""
authors = ["Jikoller <blad3516@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.1"
loguru = "^0.7.2"
pytest = "^8.3.2"
sqlalchemy = "^2.0.32"
uvicorn = "^0.30.6"
dependency-injector = "^4.41.0"
sqlmodel = "^0.0.21"
alembic = "^1.13.2"
pydantic-settings = "^2.4.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
